fixed overflow-x issue

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -523,6 +523,10 @@ h1.section_title {
     padding: 10px;
 }
 
+section#about {
+  overflow-x: hidden;
+}
+
 /*---------------------------------------------------------*/
 /* Contact Section */
 /*---------------------------------------------------------*/
